<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/step_detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/main_media_frame"
            android:layout_width="0dp"
            android:layout_height="@dimen/media_height"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#000000">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/exoPlayerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageView_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@drawable/ic_recipe"
                android:contentDescription="@string/step_image"/>

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/description_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/step_card_height"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_media_frame">

            <TextView
                android:id="@+id/textView_step_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_media_frame"
                tools:text="Step Long Description" />
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="@dimen/arrow_dim"
            android:layout_height="@dimen/arrow_dim"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_med"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_container"
            app:srcCompat="@drawable/back_arrow_selector"
            android:contentDescription="@string/go_back"
             />

        <ImageView
            android:id="@+id/imageView_next"
            android:layout_width="@dimen/arrow_dim"
            android:layout_height="@dimen/arrow_dim"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_med"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_container"
            app:srcCompat="@drawable/next_arrow_selector"
            android:layout_marginRight="@dimen/margin_large"
            android:contentDescription="@string/go_next"/>



    </android.support.constraint.ConstraintLayout>
</ScrollView>
