...
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name"
            app:srcCompat="@drawable/ic_spoon"
            android:contentDescription="@string/icon_ingredients"
             />

        <TextView
            android:id="@+id/textView_ingredients_label"
...
            android:text="@string/ingredients_label"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_ingredients"
            app:layout_constraintStart_toEndOf="@+id/imageView_ingredients"
             />

        <TextView
            android:id="@+id/textView_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
...
