<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    >
    <LinearLayout
        android:id="@+id/lin_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:id="@+id/textView_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_no_recipe"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/imageView_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_image_heigth"
            android:contentDescription="@string/recipe_image"/>

        <include layout="@layout/ingredients_layout"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
           />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
